org.smeup.sys.dk.parser.ibmi/src/org/smeup/sys/dk/parser/ibmi/cl/antlr/CLParser.java
// $ANTLR 3.5.1 /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g 2015-05-26 20:06:35

  package org.smeup.sys.dk.parser.ibmi.cl.antlr;

  import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;
import org.smeup.sys.dk.parser.ibmi.cl.util.CLParserHelper;


@SuppressWarnings("all")
public class CLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "APOS", "CHAR_SPECIAL", "CL", 
		"CLOSE_BRACE", "CMD_NAME", "COMMAND", "COMMENT", "CR", "ESCAPE", "FUN", 
		"LABEL", "OPEN_BRACE", "PAR", "PAREN", "PAR_NAME", "PAR_VALUE", "POS_PAR", 
		"ROW", "STRING", "TOKEN", "WS"
	};
	public static final int EOF=-1;
	public static final int APOS=4;
	public static final int CHAR_SPECIAL=5;
	public static final int CL=6;
	public static final int CLOSE_BRACE=7;
	public static final int CMD_NAME=8;
	public static final int COMMAND=9;
	public static final int COMMENT=10;
	public static final int CR=11;
	public static final int ESCAPE=12;
	public static final int FUN=13;
	public static final int LABEL=14;
	public static final int OPEN_BRACE=15;
	public static final int PAR=16;
	public static final int PAREN=17;
	public static final int PAR_NAME=18;
	public static final int PAR_VALUE=19;
	public static final int POS_PAR=20;
	public static final int ROW=21;
	public static final int STRING=22;
	public static final int TOKEN=23;
	public static final int WS=24;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g"; }



	   public CLParserHelper hlp = new CLParserHelper(this);

	   @Override
	  	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    	throw new MismatchedTokenException(ttype, input);
	  	}

	   @Override
	   public void reportError(RecognitionException e) {
	      super.reportError(e);
	      RuntimeException re = hlp.createException(e);
	      recover(input, e);
	      throw re;
	   }

	   @Override
	  	public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
	    	throw e;
	    }




	public static class parse_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "parse"
	// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:93:1: parse : ( row | ( ( WS )* CR ) )* EOF -> ^( CL[$parse.text] ( row )* ) ;
	public final CLParser.parse_return parse() throws RecognitionException {
		CLParser.parse_return retval = new CLParser.parse_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS2=null;
		Token CR3=null;
		Token EOF4=null;
		ParserRuleReturnScope row1 =null;

		CommonTree WS2_tree=null;
		CommonTree CR3_tree=null;
		CommonTree EOF4_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_CR=new RewriteRuleTokenStream(adaptor,"token CR");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_row=new RewriteRuleSubtreeStream(adaptor,"rule row");

		try {
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:93:8: ( ( row | ( ( WS )* CR ) )* EOF -> ^( CL[$parse.text] ( row )* ) )
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:3: ( row | ( ( WS )* CR ) )* EOF
			{
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:3: ( row | ( ( WS )* CR ) )*
			loop2:
			while (true) {
				int alt2=3;
				alt2 = dfa2.predict(input);
				switch (alt2) {
				case 1 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:4: row
					{
					pushFollow(FOLLOW_row_in_parse129);
					row1=row();
					state._fsp--;

					stream_row.add(row1.getTree());
					}
					break;
				case 2 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:10: ( ( WS )* CR )
					{
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:10: ( ( WS )* CR )
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:11: ( WS )* CR
					{
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:11: ( WS )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==WS) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:12: WS
							{
							WS2=(Token)match(input,WS,FOLLOW_WS_in_parse135);  
							stream_WS.add(WS2);

							}
							break;

						default :
							break loop1;
						}
					}

					CR3=(Token)match(input,CR,FOLLOW_CR_in_parse139);  
					stream_CR.add(CR3);

					}

					}
					break;

				default :
					break loop2;
				}
			}

			EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_parse144);  
			stream_EOF.add(EOF4);

			// AST REWRITE
			// elements: row
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 94:27: -> ^( CL[$parse.text] ( row )* )
			{
				// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:29: ^( CL[$parse.text] ( row )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CL, input.toString(retval.start,input.LT(-1))), root_1);
				// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:94:47: ( row )*
				while ( stream_row.hasNext() ) {
					adaptor.addChild(root_1, stream_row.nextTree());
				}
				stream_row.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parse"


	public static class row_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "row"
	// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:97:1: row : ( single_label | command_row );
	public final CLParser.row_return row() throws RecognitionException {
		CLParser.row_return retval = new CLParser.row_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope single_label5 =null;
		ParserRuleReturnScope command_row6 =null;


		try {
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:97:5: ( single_label | command_row )
			int alt3=2;
			alt3 = dfa3.predict(input);
			switch (alt3) {
				case 1 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:98:5: single_label
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_single_label_in_row168);
					single_label5=single_label();
					state._fsp--;

					adaptor.addChild(root_0, single_label5.getTree());

					}
					break;
				case 2 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:99:7: command_row
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_command_row_in_row176);
					command_row6=command_row();
					state._fsp--;

					adaptor.addChild(root_0, command_row6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "row"


	public static class single_label_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "single_label"
	// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:102:1: single_label : label ( WS )* CR -> ^( ROW[$single_label.text] label ) ;
	public final CLParser.single_label_return single_label() throws RecognitionException {
		CLParser.single_label_return retval = new CLParser.single_label_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS8=null;
		Token CR9=null;
		ParserRuleReturnScope label7 =null;

		CommonTree WS8_tree=null;
		CommonTree CR9_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_CR=new RewriteRuleTokenStream(adaptor,"token CR");
		RewriteRuleSubtreeStream stream_label=new RewriteRuleSubtreeStream(adaptor,"rule label");

		try {
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:102:15: ( label ( WS )* CR -> ^( ROW[$single_label.text] label ) )
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:103:5: label ( WS )* CR
			{
			pushFollow(FOLLOW_label_in_single_label194);
			label7=label();
			state._fsp--;

			stream_label.add(label7.getTree());
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:103:11: ( WS )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==WS) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:103:12: WS
					{
					WS8=(Token)match(input,WS,FOLLOW_WS_in_single_label197);  
					stream_WS.add(WS8);

					}
					break;

				default :
					break loop4;
				}
			}

			CR9=(Token)match(input,CR,FOLLOW_CR_in_single_label201);  
			stream_CR.add(CR9);

			// AST REWRITE
			// elements: label
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 103:20: -> ^( ROW[$single_label.text] label )
			{
				// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:103:22: ^( ROW[$single_label.text] label )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ROW, input.toString(retval.start,input.LT(-1))), root_1);
				adaptor.addChild(root_1, stream_label.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "single_label"


	public static class command_row_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "command_row"
	// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:106:1: command_row : ( label )? ( WS )* command CR -> ^( ROW[$command_row.text] ( label )? command ) ;
	public final CLParser.command_row_return command_row() throws RecognitionException {
		CLParser.command_row_return retval = new CLParser.command_row_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS11=null;
		Token CR13=null;
		ParserRuleReturnScope label10 =null;
		ParserRuleReturnScope command12 =null;

		CommonTree WS11_tree=null;
		CommonTree CR13_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_CR=new RewriteRuleTokenStream(adaptor,"token CR");
		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
		RewriteRuleSubtreeStream stream_label=new RewriteRuleSubtreeStream(adaptor,"rule label");

		try {
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:106:12: ( ( label )? ( WS )* command CR -> ^( ROW[$command_row.text] ( label )? command ) )
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:2: ( label )? ( WS )* command CR
			{
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:2: ( label )?
			int alt5=2;
			alt5 = dfa5.predict(input);
			switch (alt5) {
				case 1 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:3: label
					{
					pushFollow(FOLLOW_label_in_command_row223);
					label10=label();
					state._fsp--;

					stream_label.add(label10.getTree());
					}
					break;

			}

			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:11: ( WS )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==WS) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:12: WS
					{
					WS11=(Token)match(input,WS,FOLLOW_WS_in_command_row228);  
					stream_WS.add(WS11);

					}
					break;

				default :
					break loop6;
				}
			}

			pushFollow(FOLLOW_command_in_command_row232);
			command12=command();
			state._fsp--;

			stream_command.add(command12.getTree());
			CR13=(Token)match(input,CR,FOLLOW_CR_in_command_row234);  
			stream_CR.add(CR13);

			// AST REWRITE
			// elements: label, command
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 107:28: -> ^( ROW[$command_row.text] ( label )? command )
			{
				// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:30: ^( ROW[$command_row.text] ( label )? command )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ROW, input.toString(retval.start,input.LT(-1))), root_1);
				// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:107:55: ( label )?
				if ( stream_label.hasNext() ) {
					adaptor.addChild(root_1, stream_label.nextTree());
				}
				stream_label.reset();

				adaptor.addChild(root_1, stream_command.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command_row"


	public static class label_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "label"
	// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:110:1: label : ( WS )* LABEL -> ^( LABEL[$LABEL.text.substring(0, $LABEL.text.length()-1)] ) ;
	public final CLParser.label_return label() throws RecognitionException {
		CLParser.label_return retval = new CLParser.label_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS14=null;
		Token LABEL15=null;

		CommonTree WS14_tree=null;
		CommonTree LABEL15_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_LABEL=new RewriteRuleTokenStream(adaptor,"token LABEL");

		try {
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:110:7: ( ( WS )* LABEL -> ^( LABEL[$LABEL.text.substring(0, $LABEL.text.length()-1)] ) )
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:111:2: ( WS )* LABEL
			{
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:111:2: ( WS )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==WS) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:111:3: WS
					{
					WS14=(Token)match(input,WS,FOLLOW_WS_in_label261);  
					stream_WS.add(WS14);

					}
					break;

				default :
					break loop7;
				}
			}

			LABEL15=(Token)match(input,LABEL,FOLLOW_LABEL_in_label265);  
			stream_LABEL.add(LABEL15);

			// AST REWRITE
			// elements: LABEL
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 111:14: -> ^( LABEL[$LABEL.text.substring(0, $LABEL.text.length()-1)] )
			{
				// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:111:17: ^( LABEL[$LABEL.text.substring(0, $LABEL.text.length()-1)] )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(LABEL, (LABEL15!=null?LABEL15.getText():null).substring(0, (LABEL15!=null?LABEL15.getText():null).length()-1)), root_1);
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "label"


	public static class command_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "command"
	// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:114:1: command : cmd_name ( ( WS )+ pos_parm )* ( ( WS )+ parm )* ( WS )* -> ^( COMMAND[$command.text] cmd_name ( pos_parm )* ( parm )* ) ;
	public final CLParser.command_return command() throws RecognitionException {
		CLParser.command_return retval = new CLParser.command_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS17=null;
		Token WS19=null;
		Token WS21=null;
		ParserRuleReturnScope cmd_name16 =null;
		ParserRuleReturnScope pos_parm18 =null;
		ParserRuleReturnScope parm20 =null;

		CommonTree WS17_tree=null;
		CommonTree WS19_tree=null;
		CommonTree WS21_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleSubtreeStream stream_parm=new RewriteRuleSubtreeStream(adaptor,"rule parm");
		RewriteRuleSubtreeStream stream_pos_parm=new RewriteRuleSubtreeStream(adaptor,"rule pos_parm");
		RewriteRuleSubtreeStream stream_cmd_name=new RewriteRuleSubtreeStream(adaptor,"rule cmd_name");

		try {
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:115:3: ( cmd_name ( ( WS )+ pos_parm )* ( ( WS )+ parm )* ( WS )* -> ^( COMMAND[$command.text] cmd_name ( pos_parm )* ( parm )* ) )
			// /home/jamiro/Dati/eclipse/workspace_asup_0.7.0/org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CL.g:116:3: cmd_name ( ( WS )+ pos_parm )* ( ( WS )+ parm )* ( WS )*
			{
			pushFollow(FOLLOW_cmd_name_in_command287);
			cmd_name16=cmd_name();
			state._fsp--;
